; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read_support_format_ar.c_archive_read_support_format_ar.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read_support_format_ar.c_archive_read_support_format_ar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive = type { i32 }
%struct.archive_read = type { i32 }
%struct.ar = type { i32* }

@ARCHIVE_READ_MAGIC = common dso_local global i32 0, align 4
@ARCHIVE_STATE_NEW = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"archive_read_support_format_ar\00", align 1
@ENOMEM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [23 x i8] c"Can't allocate ar data\00", align 1
@ARCHIVE_FATAL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [3 x i8] c"ar\00", align 1
@archive_read_format_ar_bid = common dso_local global i32 0, align 4
@archive_read_format_ar_read_header = common dso_local global i32 0, align 4
@archive_read_format_ar_read_data = common dso_local global i32 0, align 4
@archive_read_format_ar_skip = common dso_local global i32 0, align 4
@archive_read_format_ar_cleanup = common dso_local global i32 0, align 4
@ARCHIVE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @archive_read_support_format_ar(%struct.archive* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.archive*, align 8
  %4 = alloca %struct.archive_read*, align 8
  %5 = alloca %struct.ar*, align 8
  %6 = alloca i32, align 4
  store %struct.archive* %0, %struct.archive** %3, align 8
  %7 = load %struct.archive*, %struct.archive** %3, align 8
  %8 = bitcast %struct.archive* %7 to %struct.archive_read*
  store %struct.archive_read* %8, %struct.archive_read** %4, align 8
  %9 = load %struct.archive*, %struct.archive** %3, align 8
  %10 = load i32, i32* @ARCHIVE_READ_MAGIC, align 4
  %11 = load i32, i32* @ARCHIVE_STATE_NEW, align 4
  %12 = call i32 @archive_check_magic(%struct.archive* %9, i32 %10, i32 %11, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %13 = call i64 @calloc(i32 1, i32 8)
  %14 = inttoptr i64 %13 to %struct.ar*
  store %struct.ar* %14, %struct.ar** %5, align 8
  %15 = load %struct.ar*, %struct.ar** %5, align 8
  %16 = icmp eq %struct.ar* %15, null
  br i1 %16, label %17, label %23

17:                                               ; preds = %1
  %18 = load %struct.archive_read*, %struct.archive_read** %4, align 8
  %19 = getelementptr inbounds %struct.archive_read, %struct.archive_read* %18, i32 0, i32 0
  %20 = load i32, i32* @ENOMEM, align 4
  %21 = call i32 @archive_set_error(i32* %19, i32 %20, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %22 = load i32, i32* @ARCHIVE_FATAL, align 4
  store i32 %22, i32* %2, align 4
  br label %43

23:                                               ; preds = %1
  %24 = load %struct.ar*, %struct.ar** %5, align 8
  %25 = getelementptr inbounds %struct.ar, %struct.ar* %24, i32 0, i32 0
  store i32* null, i32** %25, align 8
  %26 = load %struct.archive_read*, %struct.archive_read** %4, align 8
  %27 = load %struct.ar*, %struct.ar** %5, align 8
  %28 = load i32, i32* @archive_read_format_ar_bid, align 4
  %29 = load i32, i32* @archive_read_format_ar_read_header, align 4
  %30 = load i32, i32* @archive_read_format_ar_read_data, align 4
  %31 = load i32, i32* @archive_read_format_ar_skip, align 4
  %32 = load i32, i32* @archive_read_format_ar_cleanup, align 4
  %33 = call i32 @__archive_read_register_format(%struct.archive_read* %26, %struct.ar* %27, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i32 %28, i32* null, i32 %29, i32 %30, i32 %31, i32* null, i32 %32, i32* null, i32* null)
  store i32 %33, i32* %6, align 4
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* @ARCHIVE_OK, align 4
  %36 = icmp ne i32 %34, %35
  br i1 %36, label %37, label %41

37:                                               ; preds = %23
  %38 = load %struct.ar*, %struct.ar** %5, align 8
  %39 = call i32 @free(%struct.ar* %38)
  %40 = load i32, i32* %6, align 4
  store i32 %40, i32* %2, align 4
  br label %43

41:                                               ; preds = %23
  %42 = load i32, i32* @ARCHIVE_OK, align 4
  store i32 %42, i32* %2, align 4
  br label %43

43:                                               ; preds = %41, %37, %17
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i32 @archive_check_magic(%struct.archive*, i32, i32, i8*) #1

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @archive_set_error(i32*, i32, i8*) #1

declare dso_local i32 @__archive_read_register_format(%struct.archive_read*, %struct.ar*, i8*, i32, i32*, i32, i32, i32, i32*, i32, i32*, i32*) #1

declare dso_local i32 @free(%struct.ar*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
